refactor: Added Components annotations